-
Bug
-
Resolution: Fixed
-
Medium
-
Lustre 2.18.0
-
None
-
RHEL 10.0 client and server
-
3
-
9223372036854775807
This issue was created by maloo for jianyu <yujian@whamcloud.com>
This issue relates to the following test suite run: https://testing.whamcloud.com/test_sets/f95807d7-831c-4f34-adb6-bbd95da7dbdf
test_160l failed with the following error:
== sanity test 160l: Verify that MTIME changelog records contain the parent FID ========================================================== 17:22:08 (1766164928) CMD: trevis-153vm43 /usr/sbin/lctl get_param mdd.lustre-MDT0000.changelog_mask -n CMD: trevis-153vm43 /usr/sbin/lctl set_param mdd.lustre-MDT0000.changelog_mask=+hsm mdd.lustre-MDT0000.changelog_mask=+hsm CMD: trevis-153vm43 /usr/sbin/lctl --device lustre-MDT0000 changelog register -n CMD: trevis-153vm44 /usr/sbin/lctl get_param mdd.lustre-MDT0001.changelog_mask -n CMD: trevis-153vm44 /usr/sbin/lctl set_param mdd.lustre-MDT0001.changelog_mask=+hsm mdd.lustre-MDT0001.changelog_mask=+hsm CMD: trevis-153vm44 /usr/sbin/lctl --device lustre-MDT0001 changelog register -n CMD: trevis-153vm43 /usr/sbin/lctl get_param mdd.lustre-MDT0002.changelog_mask -n CMD: trevis-153vm43 /usr/sbin/lctl set_param mdd.lustre-MDT0002.changelog_mask=+hsm mdd.lustre-MDT0002.changelog_mask=+hsm CMD: trevis-153vm43 /usr/sbin/lctl --device lustre-MDT0002 changelog register -n CMD: trevis-153vm44 /usr/sbin/lctl get_param mdd.lustre-MDT0003.changelog_mask -n CMD: trevis-153vm44 /usr/sbin/lctl set_param mdd.lustre-MDT0003.changelog_mask=+hsm mdd.lustre-MDT0003.changelog_mask=+hsm CMD: trevis-153vm44 /usr/sbin/lctl --device lustre-MDT0003 changelog register -n Registered 4 changelog users: 'cl15 cl15 cl15 cl15' CMD: trevis-153vm43 /usr/sbin/lctl get_param -n mdd.lustre-MDT0000.changelog_users CMD: trevis-153vm43,trevis-153vm44 /usr/sbin/lctl set_param mdd.*.changelog_mask=-CREAT mdd.lustre-MDT0001.changelog_mask=-CREAT mdd.lustre-MDT0003.changelog_mask=-CREAT mdd.lustre-MDT0000.changelog_mask=-CREAT mdd.lustre-MDT0002.changelog_mask=-CREAT CMD: trevis-153vm43,trevis-153vm44 /usr/sbin/lctl set_param mdd.*.changelog_mask=-CLOSE mdd.lustre-MDT0001.changelog_mask=-CLOSE mdd.lustre-MDT0003.changelog_mask=-CLOSE mdd.lustre-MDT0000.changelog_mask=-CLOSE mdd.lustre-MDT0002.changelog_mask=-CLOSE striped dir -i0 -c2 -H all_char /mnt/lustre/d160l.sanity sanity test_160l: @@@@@@ FAIL: MTIME changelog not recorded
Test session details:
clients: https://build.whamcloud.com/job/lustre-reviews/119916 - 6.12.0-55.43.1.el10_0.x86_64
servers: https://build.whamcloud.com/job/lustre-reviews/119916 - 6.12.0-55.43.1_lustre.el10.x86_64
<<Please provide additional information about the failure here>>
VVVVVVV DO NOT REMOVE LINES BELOW, Added by Maloo for auto-association VVVVVVV
sanity test_160l - MTIME changelog not recorded