LU-19729 mdd: clamp ctime instead of clearing time flags

In mdd_fix_attr(), when the client's ctime is less than the
server's existing ctime, all time validity flags
(LA_ATIME | LA_MTIME | LA_CTIME) are cleared. This prevents
mtime and atime updates from being applied, causing
operations like utimensat to be silently ignored.

This condition occurs in multi-client environments where one
client's clock is ahead of another. The first client's touch
sets a higher ctime on the inode, and a subsequent setattr
from the second client carries a lower ctime, triggering the
flag clearing.

Instead of clearing all time flags, clamp the ctime to the
existing value. This preserves explicitly requested mtime
and atime updates while still preventing ctime from going
backwards.

Also move the mod_atime_set logic from the MDS_CLOSE_UPDATE_TIMES
else-if block to the pure setattr path, so that set-in-past
atime protection applies to all setattr operations.

Add sanity test_160v to verify that mtime updates are preserved
when two clients have clock skew.

Signed-off-by: Sohei Koyama <skoyama@ddn.com>
Change-Id: If9a4e1b79468a7dadeb5b7e113fb233daec4f7fd
Reviewed-on: https://review.whamcloud.com/c/fs/lustre-release/+/64208
Reviewed-by: Qian Yingjin <qian@ddn.com>
Reviewed-by: Andreas Dilger <adilger@thelustrecollective.com>
Reviewed-by: Oleg Drokin <green@whamcloud.com>
Tested-by: Maloo <maloo@whamcloud.com>
Tested-by: jenkins <devops@whamcloud.com>